--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,10 @@
+[build-system]
+build-backend = "flit_core.buildapi"
+requires = ["flit_core >=3.2,<4"]
+
 [project]
 name = "ariston"
-description = "ariston api"
-long_description = "Python Ariston API"
+readme = "README.md"
 version = "0.11"
 authors = [
     { name = "Tamás Füstös", email = "fustom@gmail.com" }
@@ -11,7 +14,3 @@ dependencies = [
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE" }
-
-[build-system]
-build-backend = "flit_core.buildapi"
-requires = ["flit_core >=3.2,<4"]
