--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,4 +13,5 @@ dependencies = [
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE" }
-dynamic = ['version', 'description']
+version = "0.11"
+dynamic = ['description']
