--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,8 +10,9 @@ authors = [
 ]
 dependencies = [
     "aiohttp",
+    "requests"
 ]
 requires-python = ">=3.9"
 license = { file = "LICENSE" }
-version = "0.11.5"
+version = "0.11.6"
 dynamic = ['description']
