Update pyproject.toml linking to repository and issues
This will help on repository discoverability within PyPI. 

Followed official Python guidelines from [here](https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#urls).

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,7 @@ requires-python = ">=3.9"
 license = { file = "LICENSE" }
 version = "0.19.6"
 dynamic = ['description']
+
+[project.urls]
+Repository = "https://github.com/fustom/python-ariston-api.git"
+Issues = "https://github.com/fustom/python-ariston-api/issues"
